# matrix-lib

./: .gitignore  CMakeLists.txt  Makefile
include/: matrix.hpp  sparse_matrix.hpp
src/: simd.cpp  sparse_matrix.cpp  sparse_matrix_csc.cpp
tests/: test_matrix.cpp
